--- a/pages/blog/thea-taba.mdx
+++ b/pages/blog/thea-taba.mdx
@@ -1,14 +1,16 @@
-import BlogLayout from 'components/blogLayout/blogLayout'
+import BlogLayout from "components/blogLayout/blogLayout";
 
 export const meta = {
-  title: 'Thea taba',
-  description: 'Getting started with the Next framework',
-  date: 'Aug 04, 2020',
+  title: "Thea taba",
+  description: "Getting started with the Next framework",
+  date: "Aug 04, 2020",
   readTime: 2,
-  isPublished: true
-}
+  isPublished: true,
+};
 
-export default ({ children }) => <BlogLayout meta={meta}>{children}</BlogLayout>;
+export default ({ children }) => (
+  <BlogLayout meta={meta}>{children}</BlogLayout>
+);
 
 ## My Headline
 
