feat: codeblock options

--- a/docs/thea-taba.mdx
+++ b/docs/thea-taba.mdx
@@ -14,8 +14,8 @@ tags: ["functions", "javascript"]
 ### This is a Markdown subheading
 We just used a `###` subheading in our blog post.
 <CodeBlock>
-  {`
-    import { Prism as SyntaxHighlighter } from 'react-syntax-highlighter';
+  {
+  ` import { Prism as SyntaxHighlighter } from 'react-syntax-highlighter';
     import { atomDark } from 'react-syntax-highlighter/dist/esm/styles/prism';
 
     function CodeBlock({ children }) {
@@ -26,6 +26,6 @@ We just used a `###` subheading in our blog post.
       )
     }
 
-    export default CodeBlock
-  `}
+    export default CodeBlock`
+  }
 </CodeBlock>
